# smartnodes

./: .gitignore  Cargo.toml  README.md  Whitepaper v1.md  brownie-config.yaml  lib.rs
applications/framework-ai/node/: nodeconnection.py
contracts/: MockVRFCoordinator.sol  ProxyAdmin.sol  SmartNodes.sol  SmartNodesMultiSig.sol  SmartnodesCore.sol  TransparentProxy.sol  ValidatorMultiSig.sol
contracts/experimental/task-net/: Cargo.toml  lib.rs
contracts/experimental/tasknet/: lib.rs
contracts/experimental/user/: lib.rs
contracts/experimental/users/: lib.rs
contracts/framework/: Cargo.toml  lib.rs
contracts/interfaces/: ISmartnodesCore.sol  ISmartnodesMultiSig.sol
contracts/job/: Cargo.toml  lib.rs
contracts/job_market/: Cargo.toml  lib.rs
contracts/ml/: Cargo.toml  lib.rs
contracts/ml-net/: Cargo.toml  lib.rs
contracts/poll/: Cargo.toml  lib.rs  polllib.rs
contracts/poll_market/: Cargo.toml  lib.rs
contracts/user/: Cargo.toml
deployments/python/: main.py
experimental/poll_market/: Cargo.toml
experimental/tasknet/: lib.rs
experimental/users/: lib.rs
experimental_contracts/job/: lib.rs
experimental_contracts/poll_market/: lib.rs
job/: Cargo.toml  lib.rs
ml/: Cargo.toml  lib.rs
mlnet/: Cargo.toml  lib.rs
poll/: lib.rs
poll_market/: Cargo.toml  lib.rs
scripts/: deploy.py  deploy_all.py  deploy_all_test.py  deploy_local.py  deploy_test.py  deploy_validator.py  deploy_with_vrf_mock.py  helpful_scripts.py  tests.py
scripts/tests/: check_events.py  test_all.py  test_smartnodes_core.py
src/: test.py
src/contracts/experimental/framework_old/: Cargo.toml  li.rs
src/contracts/experimental/task-net/: lib.rs
src/contracts/experimental/user/: Cargo.toml
src/contracts/framework/: Cargo.toml  lib.rs
src/contracts/ml-net/: Cargo.toml  lib.rs
src/contracts/multi-sig/: Cargo.toml  lib.rs
src/contracts/multisig/: lib.rs
src/contracts/task-net/: Cargo.toml  lib.rs
src/contracts/user-net/: Cargo.toml  lib.rs
src/nn/: linear.rs
src/p2p/: node.py
src/traits/job/: Cargo.toml
src/traits/network/: Cargo.toml
task/: Cargo.toml  lib.rs
tasknet/: lib.rs
traits/: Cargo.toml  lib.rs
traits/job/: lib.rs
user/: Cargo.toml  lib.rs
