[package]
name = "framework"
version = "0.2.0"
authors = ["[mattjhawken] <[mattjhawken@proton.me]>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

tasknet = { path = "tasknet", default-features = false, features = ["ink-as-dependency"] }
#mlnet = { path = "mlnet", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "framework"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "tasknet/std"
]
ink-as-dependency = []
