[package]
name = "framework"
version = "0.2.3"
authors = ["[mattjhawken] <[mattjhawken@proton.me]>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

job = { path = "../../traits/job", default-features = false, features = ["ink-as-dependency"] }
ml-net = { path = "../ml-net", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "framework"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",

    "job/std",
    "ml-net/std"
]

ink-as-dependency = []
