[package]
name = "tasknet"
version = "0.2.0"
authors = ["[mattjhawken] <[mattjhawken@proton.me]>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

[lib]
path = "lib.rs"
user-net = { path = "user-net", default-features = false, features = ["ink-as-dependency"] }
multi-sig = { path = "multi-sig", default-features = false, features = ["ink-as-dependency"] }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]

ink-as-dependency = []
